# barebear

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: architecture.md  manifesto.md  quickstart.md
docs/teaching/: instructor-guide.md  it-brief.md  spec-mapping.md  student-misconceptions.md  teacher-quickstart.md
examples/: README.md
examples/email_approval/: run.py
examples/file_patcher/: run.py
examples/research_assistant/: run.py
examples/ticket_triage/: run.py
lessons/: README.md
lessons/01-first-llm-call/: lesson.ipynb  lesson.md
lessons/02-the-agent-loop/: lesson.ipynb  lesson.md
lessons/03-tool-design/: lesson.ipynb  lesson.md
lessons/04-state-and-memory/: lesson.ipynb  lesson.md
lessons/05-budgets/: lesson.ipynb  lesson.md
lessons/06-policy-and-guardrails/: lesson.ipynb  lesson.md
lessons/07-checkpoints/: lesson.ipynb  lesson.md  lesson.py
lessons/08-planning/: lesson.ipynb  lesson.md  lesson.py
lessons/09-reflection/: lesson.ipynb  lesson.md  lesson.py
lessons/10-multi-agent/: lesson.ipynb  lesson.md  lesson.py
lessons/11-evaluation/: lesson.ipynb  lesson.md  lesson.py
lessons/12-honest-uncertainty/: lesson.ipynb  lesson.md  lesson.py
lessons/13-capstone/: lesson.md  rubric.md
scripts/: build_demo_gif.py  build_lessons.py
src/barebear/: __init__.py  bear.py  budget.py  checkpoint.py  cli.py  exceptions.py  policy.py  reflect.py  report.py  state.py  task.py  tool.py  uncertainty.py
src/barebear/models/: __init__.py  base.py  mock.py  ollama.py  openai.py  openrouter.py
src/barebear/testing/: __init__.py  fake_model.py
tests/: conftest.py  test_bear.py  test_budget.py  test_checkpoint.py  test_cli_bundled.py  test_cli_preflight.py  test_fake_model.py  test_mock_model.py  test_model_env_var.py  test_phase2_surface.py  test_policy.py  test_report.py  test_state.py  test_task.py  test_tool.py
