[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barebear"
version = "0.1.0"
description = "Minimal agent framework. Explicit state, policy-first tools, honest uncertainty."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Richey Malhotra" },
]
keywords = [
    "agents",
    "llm",
    "ai",
    "framework",
    "policy",
    "tools",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/richey-malhotra/barebear"
Repository = "https://github.com/richey-malhotra/barebear"
Issues = "https://github.com/richey-malhotra/barebear/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/barebear"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
