[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barebear"
version = "0.3.0"
description = "The free agentic AI course. 12 lessons, 12 concepts, real models. Read the framework — it's the textbook."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Richey Malhotra" },
]
keywords = [
    "agents",
    "agentic",
    "llm",
    "ai",
    "framework",
    "education",
    "teaching",
    "curriculum",
    "policy",
    "tools",
    "orchestration",
    "openrouter",
    "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
all = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "openai>=1.0",
]

[project.scripts]
barebear = "barebear.cli:main"

[project.urls]
Homepage = "https://github.com/richey-malhotra/barebear"
Repository = "https://github.com/richey-malhotra/barebear"
Issues = "https://github.com/richey-malhotra/barebear/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/barebear"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
